--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ log = "0.4.17"
 fern = "0.6.1"
 indoc = "1.0.8"
 clap = { version = "4.0.32", features = ["wrap_help", "derive", "env"] }
+users = "0.11.0"
 
 
 [build-dependencies]
